--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Favicon
     ============================================ -->
 
-    <link rel="shortcut icon" type="image/png" href="ico/favicon-16x16.png"/>
+    <link rel="shortcut icon" type="image/png" href="ico/favicon.png.png"/>
 
 
     <!-- Libs CSS
