--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="container">
             <div class="box-content1">
                 <div class="module sohomepage-slider ">
-                    <div class="yt-content-slider" data-rtl="yes" data-autoplay="no" data-autoheight="no" data-delay="4" data-speed="0.6" data-margin="0" data-items_column00="1" data-items_column0="1" data-items_column1="1" data-items_column2="1"  data-items_column3="1" data-items_column4="1" data-arrows="yes" data-pagination="no" data-lazyload="no" data-loop="no" data-hoverpause="yes">
+                    <div class="yt-content-slider" data-rtl="yes" data-autoplay="yes" data-autoheight="no" data-delay="4" data-speed="0.6" data-margin="0" data-items_column00="1" data-items_column0="1" data-items_column1="1" data-items_column2="1"  data-items_column3="1" data-items_column4="1" data-arrows="yes" data-pagination="no" data-lazyload="no" data-loop="no" data-hoverpause="yes">
                         <div class="yt-content-slide">
                             <a href="#"><img src="image/catalog/slideshow/home3/slide1.png" alt="slider1" class="img-responsive"></a>
                         </div>
